<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    android:background="#FFB6C1"
    tools:context=".ui.screens.AddNewProductFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFB6C1">

            <ImageView
                android:id="@+id/add_product_back"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/oval_background"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/ll"
                android:layout_toEndOf="@id/add_product_back"
                android:layout_alignTop="@id/add_product_back"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/titletext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="Add Your Product"
                    android:layout_marginTop="-5dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:text="You can add new product from here!!"
                    android:textColor="@color/black" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/card_background"
                android:backgroundTint="@color/white"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextProductName"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginRight="36dp"
                        android:background="@drawable/edit_text_background"
                        android:drawableTint="@color/black"
                        android:hint="@string/enter_product_name"
                        android:inputType="text"
                        android:paddingLeft="26dp"
                        android:paddingRight="26dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPlaceholder" />

                    <EditText
                        android:id="@+id/editTextSellingPrice"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="36dp"
                        android:background="@drawable/edit_text_background"
                        android:drawableTint="@color/black"
                        android:hint="@string/enter_product_selling_price"
                        android:inputType="numberDecimal"
                        android:paddingLeft="26dp"
                        android:paddingRight="26dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPlaceholder" />

                    <EditText
                        android:id="@+id/editTextTaxRate"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="36dp"
                        android:background="@drawable/edit_text_background"
                        android:drawableTint="@color/black"
                        android:hint="@string/enter_product_tax_rate"
                        android:inputType="numberDecimal"
                        android:paddingLeft="26dp"
                        android:paddingRight="26dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPlaceholder" />

                    <Spinner
                        android:id="@+id/spinnerProductType"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="36dp"
                        android:background="@drawable/spinner_background"
                        android:entries="@array/product_types"
                        android:paddingLeft="26dp"
                        android:paddingRight="26dp"
                        android:prompt="@string/select_product_type"
                        android:spinnerMode="dropdown" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="36dp"
                        android:background="@drawable/edit_text_background">

                        <EditText
                            android:id="@+id/editTextImageFileName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:hint="@string/select_image"
                            android:paddingStart="26dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPlaceholder" />

                        <Button
                            android:id="@+id/btnAddImage"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/baseline_attachment_24" />
                    </FrameLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="36dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="36dp">

                        <Button
                            android:id="@+id/btnAddProduct"
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:backgroundTint="#FFB6C1"
                            android:text="@string/add_your_product"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <ProgressBar
                            android:id="@+id/addProductProgress"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="16dp"
                            android:elevation="10dp"
                            android:indeterminateTint="@color/white"
                            android:visibility="invisible" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
</RelativeLayout>
